Replace ArrayList<> to Abstract Interface List<> (in Task manager) Replace ArrayList to LinkedList (in History) Update Metods getTask/SubTask/Epic by ID (to fast)