@@ -3,22 +3,23 @@ package taskmanager.manager;
 import taskmanager.tasks.Task;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private List<Task> tasksHistoryList;
+    private final LinkedList<Task> tasksHistoryList;
 
     public InMemoryHistoryManager() {
-        tasksHistoryList = new ArrayList<>();
+        tasksHistoryList = new LinkedList<>();
     }
 
     @Override
     public void add(Task task) {
         if (task != null) {
             tasksHistoryList.add(task);
-
+            //Храним историю в LinkedList, чтобы удаление первого элемента было быстрее
             if (tasksHistoryList.size() > 10) {
-                tasksHistoryList.remove(0);
+                tasksHistoryList.removeFirst();
             }
         }
     }
